# irc

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  clippy.toml  deny.toml
.github/workflows/: audit.yml  ci.yml  fuzz.yml  release.yml
crates/irc-bnc/: Cargo.toml
crates/irc-bnc/src/: admin.rs  buffer.rs  config.rs  downstream.rs  lib.rs  main.rs  upstream.rs
crates/irc-cli/: Cargo.toml
crates/irc-cli/src/: main.rs
crates/irc-client-core/: Cargo.toml
crates/irc-client-core/src/: client.rs  command.rs  dcc.rs  event.rs  lib.rs  network.rs  scripting.rs  state.rs
crates/irc-client-gui/: Cargo.toml
crates/irc-client-gui/src/: app.rs  main.rs  notifications.rs  theme.rs
crates/irc-client-gui/src/views/: channel_list.rs  connect_dialog.rs  input.rs  mod.rs  nicklist.rs  scrollback.rs  treebar.rs
crates/irc-proto/: Cargo.toml
crates/irc-proto/fuzz/: Cargo.toml  README.md
crates/irc-proto/fuzz/fuzz_targets/: casemap.rs  codec.rs  decoder.rs
crates/irc-proto/src/: cap.rs  casemap.rs  codec.rs  command.rs  ctcp.rs  dcc.rs  error.rs  format.rs  ident.rs  isupport.rs  lib.rs  limits.rs  message.rs  mode.rs  numeric.rs  params.rs  prefix.rs  tags.rs  util.rs  verb.rs
crates/irc-proto/tests/: roundtrip.rs
crates/irc-server/: Cargo.toml
crates/irc-server/migrations/: 001_accounts.sql
crates/irc-server/src/: account.rs  caps.rs  cloak.rs  config.rs  connection.rs  error.rs  flood.rs  lib.rs  limiter.rs  main.rs  metrics.rs  numeric.rs  oper.rs  proxy_proto.rs  runtime.rs  state.rs  store.rs  tls.rs
crates/irc-server/src/handler/: account.rs  channel.rs  keepalive.rs  messaging.rs  mod.rs  mode.rs  monitor.rs  oper.rs  registration.rs  sasl.rs
crates/irc-server/src/state/: channel.rs  mod.rs  user.rs
crates/irc-server/tests/: channels.rs  registration.rs
crates/irc-testkit/: Cargo.toml
crates/irc-testkit/src/: clock.rs  dnsbl.rs  lib.rs  smtp.rs  store.rs
docs/: README.md  security-and-abuse.md
examples/: README.md  bnc-config.toml  server-config.toml
ops/compose/: README.md  docker-compose.yml
ops/docker/: .dockerignore  irc-bnc.Dockerfile  irc-cli.Dockerfile  irc-server.Dockerfile
ops/grafana/: README.md  server-dashboard.json
ops/prometheus/: README.md  scrape.yml
