[package]
name = "irc-bnc"
description = "Multi-user IRC bouncer with persistent upstreams and IRCv3 server-time replay."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "irc-bnc"
path = "src/main.rs"

[lints]
workspace = true
