[package]
name = "irc-client-core"
description = "Headless IRC client library shared by the GUI client and the bouncer."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true
