[package]
name = "irc-client-core"
description = "Headless IRC client library shared by the GUI client and the bouncer."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
irc-proto = { path = "../irc-proto", version = "0.1.0" }
bytes = "1"
tokio = { version = "1", features = ["rt", "net", "sync", "time", "io-util", "macros", "fs"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
tracing = "0.1"
thiserror = "1"
rhai = "1"
parking_lot = "0.12"
