[package]
name = "irc-client-gui"
description = "mIRC-style desktop IRC client built on iced."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "irc-client-gui"
path = "src/main.rs"

[dependencies]
irc-client-core = { path = "../irc-client-core", version = "0.0.0" }
irc-proto = { path = "../irc-proto", version = "0.0.0" }
iced = { version = "0.13", features = ["tokio"] }
bytes = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
