[package]
name = "irc-server"
description = "Single-node IRC daemon with IRCv3 baseline, accounts, cloaks, and SQLite-backed state."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "irc-server"
path = "src/main.rs"

[dependencies]
irc-proto = { path = "../irc-proto" }

anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
futures-util = "0.3"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "io-util",
    "time",
    "signal",
] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "io-util"] }

[lints]
workspace = true
