[package]
name = "irc-server"
description = "Single-node IRC daemon with IRCv3 baseline, accounts, cloaks, and SQLite-backed state."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "irc-server"
path = "src/main.rs"

[dependencies]
irc-proto = { path = "../irc-proto", version = "0.0.0" }

anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "io-util",
    "time",
    "signal",
] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = "0.26"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
rand = "0.9"
base64 = "0.22"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "io-util", "test-util"] }

[lints]
workspace = true
